--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div id="intakeq" class="tab-content">
                     <div class="alert alert-info"><strong>📋 IntakeQ Portal</strong></div>
                     <div style="margin-bottom: 30px;">
-                        <a href="https://intakeq.com/login" target="_blank" class="btn btn-primary" style="font-size: 18px; padding: 20px 40px;">Open IntakeQ Portal</a>
+                        <a href="https://intakeq.com/signin" target="_blank" class="btn btn-primary" style="font-size: 18px; padding: 20px 40px;">Open IntakeQ Portal</a>
                     </div>
                     
                     <div style="background: #f8f9fa; padding: 30px; border-radius: 15px; border-left: 4px solid #667eea;">
